assets/src/scss/frontend/learning-area/pages/_quiz-summary.scss
@use '@Core/scss/mixins' as *;
@use '@Core/scss/tokens' as *;

.tutor-quiz-summary-page {
  --tutor-quiz-summary-header-height: 64px;
  --tutor-quiz-summary-header-top: 0px;
  --tutor-quiz-summary-sidebar-top: calc(
    var(--tutor-quiz-summary-header-top) + #{$tutor-spacing-13} + var(--tutor-quiz-summary-header-height)
  );

  body:has(#wpadminbar) & {
    --tutor-quiz-summary-header-top: 46px;
  }

  @include tutor-breakpoint-up(sm) {
    body:has(#wpadminbar) & {
      --tutor-quiz-summary-header-top: 32px;
    }
  }

  background-color: $tutor-surface-base;
  .tutor-quiz-summary-header {
    position: sticky;
    top: var(--tutor-quiz-summary-header-top);
    z-index: $tutor-z-header;
    min-height: var(--tutor-quiz-summary-header-height);
    background-color: $tutor-surface-l1;
    padding: 0 $tutor-spacing-6;
    border-bottom: 1px solid $tutor-border-idle;

    &-inner {
      @include tutor-flex(row, center, space-between);
      max-width: 736px;
      min-height: var(--tutor-quiz-summary-header-height);
      margin: 0 auto;
    }
  }

  .tutor-quiz-summary-body {
    max-width: 1220px;
    padding-block: $tutor-spacing-13;
    margin-inline: auto;
    display: grid;
    grid-template-columns: 300px 1fr;
    gap: 128px;

    @include tutor-breakpoint-down(sm) {
      grid-template-columns: 1fr;
    }
  }

  .tutor-quiz-summary-sidebar {
    position: sticky;
    top: var(--tutor-quiz-summary-sidebar-top);
    align-self: start;

    @include tutor-breakpoint-down(sm) {
      display: none;
    }

    .tutor-quiz-sidebar-questions {
      .tutor-quiz-sidebar-question-item {
        all: unset;
        @include tutor-flex(row);
        outline: none;
        box-shadow: none;
        gap: $tutor-spacing-5;
        padding: $tutor-spacing-5 $tutor-spacing-8;

        .tutor-question-number {
          @include tutor-typography(p2, bold);
          @include tutor-flex(row, center);
          gap: $tutor-spacing-5;
          min-width: 46px;
          align-self: start;
          padding-inline-start: $tutor-spacing-4;

          &::before {
            content: '';
            display: block;
            height: 8px;
            width: 8px;
            border-radius: 50%;
            background-color: $tutor-icon-disabled;
          }
        }

        .tutor-question-content {
          @include tutor-typography(p2);
        }

        &.active {
          background-color: $tutor-surface-l1;
          outline: 1px solid $tutor-border-idle;
          border-radius: $tutor-radius-md;
        }

        &.correct .tutor-question-number::before {
          background-color: $tutor-icon-success-primary;
        }

        &.incorrect .tutor-question-number::before {
          background-color: $tutor-icon-critical;
        }
      }
    }
  }

  .tutor-quiz-review-dnd {
    border: 1px solid $tutor-border-idle;
    border-radius: $tutor-radius-2xl;
    padding: $tutor-spacing-8;
    background: $tutor-surface-l1;

    @include tutor-breakpoint-down(sm) {
      padding: $tutor-spacing-5;
    }
  }

  .tutor-quiz-review-dnd-grid {
    @include tutor-flex(column);
    gap: $tutor-spacing-3;
  }

  .tutor-quiz-review-dnd-head {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: $tutor-spacing-6;
  }

  .tutor-quiz-review-dnd-rows {
    @include tutor-flex(column);
    gap: $tutor-spacing-3;
  }

  .tutor-quiz-review-dnd-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: $tutor-spacing-6;
    align-items: stretch;

    @include tutor-breakpoint-down(sm) {
      grid-template-columns: 1fr;
      gap: $tutor-spacing-4;
    }
  }

  .tutor-quiz-review-col-title {
    @include tutor-typography(tiny, regular, subdued);
    margin-bottom: $tutor-spacing-3;
  }

  .tutor-quiz-review-item {
    @include tutor-flex(row, center, flex-start);
    @include tutor-typography(small, semibold);
    gap: $tutor-spacing-3;
    min-height: 38px;
    border: 1px solid $tutor-border-idle;
    border-radius: $tutor-radius-md;
    background: $tutor-surface-base;
    padding: $tutor-spacing-4;
    overflow: hidden;

    &:has(img) {
      min-height: 48px;
    }

    img {
      width: 32px;
      height: 32px;
      border-radius: $tutor-radius-xs;
      object-fit: cover;
      object-position: center;
      flex-shrink: 0;
    }

    &[data-option='correct'] {
      color: $tutor-text-success;
      border-color: $tutor-border-success;
      background: $tutor-surface-success;
    }

    &[data-option='incorrect'] {
      color: $tutor-text-critical;
      border-color: $tutor-border-error;
      background: $tutor-surface-critical;
    }
  }

  .tutor-quiz-question[data-question='fill_in_the_blank'] {
    .tutor-quiz-question-options {
      gap: $tutor-spacing-5;
    }

    .tutor-quiz-question-option {
      border-radius: $tutor-radius-lg;
      background: $tutor-surface-base;
      padding: $tutor-spacing-6;
    }
  }

  .tutor-quiz-summary-feedback {
    @include tutor-flex(column);
    gap: $tutor-spacing-4;
    margin-top: $tutor-spacing-6;
    border: 1px solid $tutor-border-brand-secondary;
    border-radius: $tutor-radius-lg;
    background-color: $tutor-surface-brand-tertiary;
    padding: $tutor-spacing-6;

    [data-title] {
      @include tutor-typography(small, regular, subdued);
    }

    [data-body] {
      @include tutor-typography(p1);
    }
  }
}

